th alignment fix

--- a/pwa/src/templates/templateParts/myAccount/MyAccountTemplate.css
+++ b/pwa/src/templates/templateParts/myAccount/MyAccountTemplate.css
@@ -15,3 +15,7 @@
 .MyAccountTemplate-spacing {
   margin-block-end: var(--nlportal-space-block-5xl);
 }
+
+.MyAccountTemplate-th {
+  width: 35%;
+}
